fixed spacing issues on top right corner

--- a/mod2_solution/css/styles.css
+++ b/mod2_solution/css/styles.css
@@ -25,8 +25,8 @@ p.title{
     font-size: 150%;
     width: 180px;
     height: 40px;
-    right: -.5%;
-    top: -1%;
+    right: 0;
+    top: 0;
     text-align: center;
     margin: 0;
     padding-top: 1%;
